--- a/pokemon-battles-react/src/Variables.css
+++ b/pokemon-battles-react/src/Variables.css
@@ -24,7 +24,7 @@
     --ground: #6E491F;
     --ice: #BEE7F5;
     --normal: #C899A7;
-    --poision: #9B69D9;
+    --poison: #9B69D9;
     --psychic: #F81C91;
     --rock: #8B3E21;
     --steal: #43BD94;
@@ -59,4 +59,32 @@
     overflow: hidden;
     background-color: var(--blue) !important;
     color: var(--light);
+}
+
+.sbutton {
+    background-color: var(--yellow);
+    border: none;
+    border-radius: 4px;
+    padding: 10px;
+    margin-top: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    transition: all ease-in-out .2s;
+    color: black;
+}
+
+
+.sbutton-cancel {
+    background-color: var(--fire);
+    border: none;
+    border-radius: 4px;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+.yellow-text {
+    color: var(--yellow);
+}
+
+a {
+    text-decoration: none !important;
 }
