--- a/pokemon-battles-react/src/Variables.css
+++ b/pokemon-battles-react/src/Variables.css
@@ -56,6 +56,8 @@
 .full-screen {
     width: 100vw;
     height: 100vh;
+    max-height: 667px;
+    max-width: 375px;
     overflow: hidden;
     background-color: var(--blue) !important;
     color: var(--light);
