--- a/pokemon-battles-react/src/pages/welcome/Welcome.css
+++ b/pokemon-battles-react/src/pages/welcome/Welcome.css
@@ -48,7 +48,7 @@ h3 {
   align-items: center;
 }
 
-.menu-item img:nth-child(1) {
+.menu-item img:nth-child(1):not(.profile-pic) {
   opacity: 0.1;
   filter: grayscale(1);
   position: absolute;
@@ -58,12 +58,12 @@ h3 {
   height: auto;
 }
 
-.menu-item img:nth-child(2) {
+.menu-item img:nth-child(2):not(.profile-pic) {
   height: 40px;
   margin-right: 4px;
 }
 
-#find-match{
+#find-match {
   background-color: var(--grass);
   grid-row: 2 / 4;
   grid-column: 1 / 3;
@@ -76,7 +76,7 @@ h3 {
   grid-column: 2 / 3;
 }
 
-#friends {
+#friends-link {
   background-color: var(--water);
   grid-row: 4 / 5;
   grid-column: 1 / 2;
