--- a/pokemon-battles-react/src/pages/welcome/Welcome.css
+++ b/pokemon-battles-react/src/pages/welcome/Welcome.css
@@ -84,6 +84,12 @@ h3 {
 
 #settings {
   background-color: var(--fire);
+  grid-row: 6 / 6;
+  grid-column: 1 / 3;
+}
+
+#shop {
+  background-color: var(--electric);
   grid-row: 5 / 6;
   grid-column: 1 / 3;
 }
