--- a/pokemon-battles-react/src/pages/party/party.css
+++ b/pokemon-battles-react/src/pages/party/party.css
@@ -1,7 +1,7 @@
-#welcome {
+#party {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(7, 1fr);
+  grid-template-rows: repeat(8, 1fr);
   flex-direction: column;
   background-image: url('../../img/items/pokestop.png');
   background-size: cover;
@@ -14,7 +14,7 @@
 
 }
 
-.menu-item {
+.poke-item {
   width: calc(100%);
   margin-bottom: 1rem;
   border-radius: 4px;
@@ -28,7 +28,7 @@
   align-items: center;
 }
 
-.menu-item::after {
+.poke-item::after {
   content: '';
   width: 100%;
   height: 100%;
@@ -48,48 +48,58 @@ h3 {
   align-items: center;
 }
 
-.menu-item img:nth-child(1) {
-  opacity: 0.1;
-  filter: grayscale(1);
+.poke-item img:nth-child(1) {
+  opacity: 0.55;
   position: absolute;
-  left: 0;
+  left: -5%;
   top: 0;
   width: 120%;
   height: auto;
+  filter: none;
 }
 
-.menu-item img:nth-child(2) {
-  height: 40px;
-  margin-right: 4px;
+.poke-item p {
+  z-index: 1;
+  margin-bottom: 0;
+  margin-left: 10%;
 }
 
-#find-match{
-  background-color: var(--grass);
+#p1{
+  background-color: var(--fire);
   grid-row: 2 / 4;
-  grid-column: 1 / 3;
-  font-size: 2.3rem !important;
-}
-
-#partymenu{
-  background-color: var(--electric);
-  grid-row: 4 / 5;
-  grid-column: 1 / 3;
-}
-
-#top-players {
-  background-color: var(--dragon);
-  grid-row: 5 / 6;
-  grid-column: 2 / 3;
-}
-
-#friends {
-  background-color: var(--water);
-  grid-row: 5 / 6;
   grid-column: 1 / 2;
 }
 
-#settings {
-  background-color: var(--fire);
-  grid-row: 6 / 7;
-  grid-column: 1 / 3;
+#p2{
+  background-color: var(--fighting);
+  grid-row: 2 / 4;
+  grid-column: 2 / 3;
+}
+
+#p3 {
+  background-color: var(--electric);
+  grid-row: 4 / 6;
+  grid-column: 1 / 2;
+}
+
+#p4 {
+  background-color: var(--water);
+  grid-row: 4 / 6;
+  grid-column: 2 / 3;
+}
+
+#p5 {
+  background-color: var(--psychic);
+  grid-row: 6 / 8;
+  grid-column: 1 / 2;
+}
+
+#p6 {
+  background-color: var(--normal);
+  grid-row: 6 / 8;
+  grid-column: 2 / 3;
+}
+
+#return {
+  background-color: var(--danger);
 }
