--- a/pokemon-battles-react/src/pages/settings/settings.css
+++ b/pokemon-battles-react/src/pages/settings/settings.css
@@ -88,3 +88,13 @@ p{
     transition: all 0.3s ease 0s;
     box-shadow: rgb(13, 15, 17) 0px 20px 20px -10px; 
 }
+
+#vol-slider{
+    margin-top: 24px;
+    width: 190px;
+   }
+ 
+
+   #logout{
+       background-color: red;
+   }
