--- a/pokemon-battles-react/src/pages/welcome/Welcome.css
+++ b/pokemon-battles-react/src/pages/welcome/Welcome.css
@@ -1,7 +1,7 @@
 #welcome {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: repeat(7, 1fr);
   flex-direction: column;
   background-image: url('../../img/items/pokestop.png');
   background-size: cover;
@@ -70,21 +70,27 @@ h3 {
   font-size: 2.3rem !important;
 }
 
+#partymenu{
+  background-color: var(--electric);
+  grid-row: 4 / 5;
+  grid-column: 1 / 3;
+}
+
 #top-players {
   background-color: var(--dragon);
-  grid-row: 4 / 5;
+  grid-row: 5 / 6;
   grid-column: 2 / 3;
 }
 
 #friends-link {
   background-color: var(--water);
-  grid-row: 4 / 5;
+  grid-row: 5 / 6;
   grid-column: 1 / 2;
 }
 
 #settings {
   background-color: var(--fire);
-  grid-row: 6 / 6;
+  grid-row: 6 / 7;
   grid-column: 1 / 3;
 }
 
@@ -92,4 +98,4 @@ h3 {
   background-color: var(--electric);
   grid-row: 5 / 6;
   grid-column: 1 / 3;
-}
+} 
