--- a/pokemon-battles-react/src/pages/welcome/Welcome.css
+++ b/pokemon-battles-react/src/pages/welcome/Welcome.css
@@ -93,3 +93,9 @@ h3 {
   grid-row: 6 / 7;
   grid-column: 1 / 3;
 }
+
+#shop-link {
+  background-color: var(--electric);
+  grid-row: 5 / 6;
+  grid-column: 1 / 3;
+} 
