--- a/pokemon-battles-react/src/pages/shop/components/ShopItem.css
+++ b/pokemon-battles-react/src/pages/shop/components/ShopItem.css
@@ -9,6 +9,10 @@
   align-items: center;
   text-transform: capitalize;
   background-color: rgba(1, 1, 1, 0.295);
-  height: 300px;
+  flex-grow: 1;
   flex-direction: column;
+}
+
+.shop-item-img {
+  height: 160px;
 }
