fixed css - worked as a group.

--- a/pokemon-battles-react/src/pages/shop/Shop.css
+++ b/pokemon-battles-react/src/pages/shop/Shop.css
@@ -14,6 +14,10 @@
   overflow-x: hidden !important;
 }
 
+#shop-row div {
+  margin-bottom: 1rem;
+}
+
 #shop::-webkit-scrollbar {
   display: none;
 }
