--- a/pokemon-battles-react/src/pages/party/party.css
+++ b/pokemon-battles-react/src/pages/party/party.css
@@ -62,6 +62,9 @@ h3 {
   z-index: 1;
   margin-bottom: 0;
   margin-left: 10%;
+  font-size: 1.2rem;
+  text-align: center;
+  width: 100%;
 }
 
 #p1{
