--- a/pokemon-battles-react/src/Variables.css
+++ b/pokemon-battles-react/src/Variables.css
@@ -60,6 +60,7 @@
     overflow: hidden;
     background-color: var(--blue) !important;
     color: var(--light);
+    position: relative;
 }
 
 .sbutton {
