--- a/pokemon-battles-react/src/Variables.css
+++ b/pokemon-battles-react/src/Variables.css
@@ -55,12 +55,30 @@
 .full-screen {
     width: 100vw;
     height: 100vh;
-    max-height: 667px;
-    max-width: 375px;
     overflow: hidden;
     background-color: var(--blue) !important;
     color: var(--light);
     position: relative;
+}
+
+.content {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-image: url('./img/items/pokestop.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: left;
+    font-family: var(--museo);
+    text-shadow: -1px 2px 3px #3d3d3d6b, 0px 0px;
+    height: 100%;
+    width: 100%;
+    padding-bottom: calc(2rem + 50px);
+}
+
+.content-center {
+    justify-content: center;
 }
 
 .sbutton {
