--- a/pokemon-battles-react/src/pages/party/party.css
+++ b/pokemon-battles-react/src/pages/party/party.css
@@ -1,31 +1,21 @@
 #party {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(8, 1fr);
-  flex-direction: column;
-  background-image: url('../../img/items/pokestop.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: left;
-  font-family: var(--museo);
-  text-shadow: -1px 2px 3px #3d3d3d6b, 0px 0px;
-  padding: 1rem;
-  gap: 0 1rem;
-
+  grid-template-rows: repeat(5, 1fr);
+  gap: 1rem;
 }
 
 .poke-item {
   width: calc(100%);
-  margin-bottom: 1rem;
   border-radius: 4px;
-  font-size: 1.4rem;
-  padding: 10px;
-  color: black;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;  background-size: cover;
   position: relative;
   overflow: hidden;
   display: flex;
   align-items: center;
+  text-shadow: 1px 1px 1px #fdfdfd6b, 0px 0px;
+  color: var(--blue);
+
 }
 
 .poke-item::after {
@@ -37,7 +27,6 @@
     to left, 
     rgba(201, 201, 201, 0.521), 
     rgba(0, 0, 0, 0));
-  
 }
 
 h3 {
@@ -48,13 +37,10 @@ h3 {
   align-items: center;
 }
 
-.poke-item img:nth-child(1) {
+.poke-item img {
   opacity: 0.55;
   position: absolute;
-  left: -5%;
-  top: 0;
-  width: 120%;
-  height: auto;
+  height: 100%;
   filter: none;
 }
 
@@ -69,40 +55,48 @@ h3 {
 
 #p1{
   background-color: var(--fire);
-  grid-row: 2 / 4;
+  grid-row: 2 / 3;
   grid-column: 1 / 2;
 }
 
 #p2{
   background-color: var(--fighting);
-  grid-row: 2 / 4;
+  grid-row: 2 / 3;
   grid-column: 2 / 3;
 }
 
 #p3 {
   background-color: var(--electric);
-  grid-row: 4 / 6;
+  grid-row: 3 / 4;
   grid-column: 1 / 2;
 }
 
 #p4 {
   background-color: var(--water);
-  grid-row: 4 / 6;
+  grid-row: 3 / 4;
   grid-column: 2 / 3;
 }
 
 #p5 {
   background-color: var(--psychic);
-  grid-row: 6 / 8;
+  grid-row: 4 / 5;
   grid-column: 1 / 2;
 }
 
 #p6 {
   background-color: var(--normal);
-  grid-row: 6 / 8;
+  grid-row: 4 / 5;
   grid-column: 2 / 3;
 }
 
 #return {
-  background-color: var(--danger);
+  grid-row: 5 / 6;
+  grid-column: 1 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#return .sbutton {
+  width: 100%;
 }
