--- a/pokemon-battles-react/src/components/SettingsButton.css
+++ b/pokemon-battles-react/src/components/SettingsButton.css
@@ -1,3 +1,5 @@
+
+
 #settings-button {
     position: absolute;
     bottom: 1rem;
@@ -42,4 +44,29 @@
 #settings-menu #vol-slider {
     /* height: 0 !important; */
     background-color: transparent !important;
+    max-width: 200px;
+}
+
+.music-on {
+    background-color: rgb(16, 190, 16) !important;
+}
+
+.music-off{
+    background-color: red !important;
+} 
+
+.music{
+    border: none;
+    color:white;
+    font-size: 32px;
+    width: 200px;
+    height: 43px;
+    border-radius:5px;
+    margin-top: 10px;
+    transition: all 0.3s ease 0s;
+    box-shadow: rgb(13, 15, 17) 0px 20px 20px -10px; 
+}
+
+.music:hover{
+    transform: scale(1.1);
 }
