--- a/pokemon-battles-react/src/Variables.css
+++ b/pokemon-battles-react/src/Variables.css
@@ -99,6 +99,17 @@
     color: black;
 }
 
+.sbutton {
+    background-color: var(--yellow);
+    border: none;
+    border-radius: 4px;
+    padding: 10px;
+    margin-top: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    transition: all ease-in-out .2s;
+    color: black;
+}
+
 
 .sbutton-cancel {
     background-color: var(--fire);
