--- a/pokemon-battles-react/src/pages/welcome/Welcome.css
+++ b/pokemon-battles-react/src/pages/welcome/Welcome.css
@@ -1,7 +1,7 @@
 #welcome {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: repeat(7, 1fr);
   font-family: var(--museo);
   text-shadow: -1px 2px 3px #3d3d3d6b, 0px 0px;
   gap: 0 1rem;
@@ -89,8 +89,22 @@ h3 {
   grid-column: 1 / 3;
 } 
 
-#settings {
+
+#profile-link {
   background-color: var(--fire);
   grid-row: 7 / 8;
   grid-column: 1 / 3;
+}
+
+#profile-link img{
+  border-radius: 100vw; 
+}
+
+#welcome a img:nth-child(2) {
+  margin-right: 1rem;
+}
+
+#welcome a:hover {
+  background-color: var(--black);
+  color: var(--light);
 }
