--- a/pokemon-battles-react/src/Variables.css
+++ b/pokemon-battles-react/src/Variables.css
@@ -124,11 +124,12 @@ a {
 
 .modal-content {
     background-color: var(--blue) !important;
-    backdrop-filter: blur(10px);
-    min-height: 50%;
+}
+
+.modal-body input{
+    color: var(--black) !important;
 }
 
 input {
     color: var(--light) !important;
-    /* background-color: var(--flying) !important; */
 }
