--- a/pokemon-battles-react/src/pages/welcome/Welcome.css
+++ b/pokemon-battles-react/src/pages/welcome/Welcome.css
@@ -113,11 +113,13 @@ h3 {
 #new-user {
   grid-row: 1 / 8;
   grid-column: 1 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-#new-user img {
-  height: 200px;
-}
+
 
 #new-user h1 {
   color: var(--yellow);
@@ -148,8 +150,43 @@ h3 {
  width: min(50vw, 200px);
 }
 
-#new-user img {
-  width: 25%;
+/* Images */
+#new-user .first-pokemon-unselected {
+  height: 200px;
+  transition: all ease .25s;
+  filter: grayscale(1) brightness(0);
+  cursor: pointer;
+}
+
+#new-user .first-pokemon-unselected:hover {
+  transform: scale(1.1);
+  filter: grayscale(0);
+}
+
+#new-user .pokemon-type {
+  padding: 6px;
+  border-radius: 6px;
+  margin: 6px;
+}
+
+#new-user .first-pokemon-unselected {
+  width: 30%;
   height: auto;
   padding: 1rem;
+}
+
+#new-user .first-pokemon-selected {
+  width: 25%;
+  min-width: 150px;
+  height: auto;
+  padding: 1rem;
+}
+
+#new-user h3 {
+  text-transform: capitalize;
+  padding: 0;
+}
+
+#new-user .prof {
+  height: 200px;
 }
