--- a/pokemon-battles-react/src/pages/party/party.css
+++ b/pokemon-battles-react/src/pages/party/party.css
@@ -1,102 +1,89 @@
 #party {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(4, 1fr);
-  gap: 1rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-.poke-item {
-  width: calc(100%);
+.party-item {
+  height: auto;
+  max-width: 400px;
   border-radius: 4px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;  background-size: cover;
-  position: relative;
   overflow: hidden;
   display: flex;
-  align-items: center;
-  text-shadow: 1px 1px 1px #fdfdfd6b, 0px 0px;
-  color: var(--blue);
-
+  /* text-shadow: 1px 1px 1px #fdfdfd6b, 0px 0px; */
+  color: var(--light);
+  position: relative;
+  font-size: .85rem;
 }
 
-.poke-item::after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: linear-gradient(
-    to left, 
-    rgba(201, 201, 201, 0.521), 
-    rgba(0, 0, 0, 0));
-}
 
-h3 {
-  grid-row: 1 / 2;
-  grid-column: 1 / 3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.poke-item img {
-  opacity: 0.55;
-  position: absolute;
-  height: 100%;
+.party-item img {
+  height: 100px;
+  width: auto;
   filter: none;
+  padding: 6px;
+  filter: drop-shadow(5px 3px 2px #222);
 }
 
-.poke-item p {
-  z-index: 1;
-  margin-bottom: 0;
-  margin-left: 10%;
-  font-size: 1.2rem;
-  text-align: center;
+.party-words {
+  text-align: left;
   width: 100%;
+  text-transform: capitalize;
+  padding: 6px;
+  background-color: var(--blue);
 }
 
-#p1{
-  background-color: var(--fire);
-  grid-row: 2 / 3;
-  grid-column: 1 / 2;
+.party-type {
+  padding: 0 6px;
+  border-radius: 6px;
 }
 
-#p2{
-  background-color: var(--fighting);
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
-}
-
-#p3 {
-  background-color: var(--electric);
-  grid-row: 3 / 4;
-  grid-column: 1 / 2;
-}
-
-#p4 {
-  background-color: var(--water);
-  grid-row: 3 / 4;
-  grid-column: 2 / 3;
-}
-
-#p5 {
-  background-color: var(--psychic);
-  grid-row: 4 / 5;
-  grid-column: 1 / 2;
-}
-
-#p6 {
-  background-color: var(--normal);
-  grid-row: 4 / 5;
-  grid-column: 2 / 3;
-}
-
-#return {
-  grid-row: 5 / 6;
-  grid-column: 1 / 3;
+.party-img {
+  background-color: var(--light);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-#return .sbutton {
-  width: 100%;
+.party-level {
+  background-color: white;
+  border-radius: 100vw;
+  font-size: 1.5rem;
+  color: black;
+  float: right;
+  padding: 0 10px;
+  text-align: center; 
 }
+
+/* Fight Buttons */
+.move {
+  text-align: left;
+  width: 100%;
+  background-color: var(--light);
+  padding-left: 6px;
+  color: var(--dark);
+}
+
+.moves:first-of-type .move{
+  border-radius: 6px 0 0 0;
+}
+
+.moves:last-of-type .move{
+  border-radius: 0 0 0 6px;
+}
+
+.power {
+  background-color: var(--gray);
+  clip-path: polygon(20% 0, 100% 0, 100% 100%, 0% 100%);
+  border: 2px var(--gray) solid;
+  width: 100%;
+  max-width: 70px;
+  text-align: right;
+  float: right;
+  color: var(--light);
+  border: transparent;
+  padding-right: 6px;
+}
+
+
