--- a/pokemon-battles-react/src/pages/party/party.css
+++ b/pokemon-battles-react/src/pages/party/party.css
@@ -36,7 +36,7 @@
 
 .party-type {
   padding: 0 6px;
-  border-radius: 6px;
+  border-radius: 4px;
 }
 
 .party-img {
@@ -49,10 +49,10 @@
 .party-level {
   background-color: white;
   border-radius: 100vw;
-  font-size: 1.5rem;
+  font-size: calc(1.325rem + .9vw);
   color: black;
   float: right;
-  padding: 0 10px;
+  padding: 0 1rem;
   text-align: center; 
 }
 
