--- a/pokemon-battles-react/src/pages/welcome/Welcome.css
+++ b/pokemon-battles-react/src/pages/welcome/Welcome.css
@@ -1,10 +1,9 @@
 #welcome {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(7, 1fr);
+  grid-template-columns: auto;
+  grid-template-rows: 100px auto;
   font-family: var(--museo);
   text-shadow: -1px 2px 3px #3d3d3d6b, 0px 0px;
-  gap: 0 1rem;
 }
 
 .menu-item {
@@ -33,6 +32,8 @@
   
 }
 
+
+
 h3 {
   grid-row: 1 / 2;
   grid-column: 1 / 3;
@@ -58,42 +59,48 @@ h3 {
 
 #find-match {
   background-color: var(--grass);
-  grid-row: 2 / 4;
-  grid-column: 1 / 3;
+  grid-row: 2 / 5;
+  grid-column: 1 / 2;
   font-size: 2.3rem !important;
 }
 
 #partymenu{
   background-color: var(--electric);
-  grid-row: 4 / 5;
-  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+}
+
+#backpackmenu{
+  background-color: var(--dragon);
+  grid-row: 3 / 4;
+  grid-column: 2 / 3;
 }
 
 #friends-link {
   background-color: var(--water);
-  grid-row: 5 / 6;
-  grid-column: 1 / 2;
+  grid-row: 4 / 5;
+  grid-column: 2 / 3;
 }
 
 
 #top-players {
   background-color: var(--dragon);
   grid-row: 5 / 6;
-  grid-column: 2 / 3;
+  grid-column: 1 / 2;
 }
 
 
 #shop-link {
-  background-color: var(--fighting);
-  grid-row: 6 / 7;
-  grid-column: 1 / 3;
+  background-color: var(--dragon);
+  grid-row: 5 / 8;
+  grid-column: 2 / 3;
 } 
 
 
 #profile-link {
   background-color: var(--fire);
   grid-row: 7 / 8;
-  grid-column: 1 / 3;
+  grid-column: 1 / 2;
 }
 
 #profile-link img{
