--- a/pokemon-battles-react/src/pages/welcome/Matches.css
+++ b/pokemon-battles-react/src/pages/welcome/Matches.css
@@ -7,8 +7,9 @@
   text-shadow: none;
   color: var(--black);
   width: 100%;
-  overflow-y: auto;
+  overflow-y: auto !important;
   overflow-x: hidden;
+  height: 100%;
 }
 
 #matches .matches-party{
@@ -57,10 +58,11 @@ text-transform: capitalize;
 }
 
 #matches .matches-border {
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 1rem;
   padding: 1rem;
-  margin: 1rem;
+}
+
+#matches .row {
+  padding: 1rem;
 }
 
 .matches-border h4 {
