--- a/pokemon-battles-react/src/pages/welcome/welcomeParty/WelcomeParty.css
+++ b/pokemon-battles-react/src/pages/welcome/welcomeParty/WelcomeParty.css
@@ -6,18 +6,49 @@
   display: flex;
 }
 
+.poke-bar img {
+  height: 3rem;
+}
+
+.myParty {
+  padding: 0;
+}
+
 .myParty .level {
   clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
   width: 40px;
   text-align: left;
   padding: 0 4px;
+  display: flex;
+  align-items: center;
+  color: var(--light);
 }
 
 .myParty .pokemon-name {
   text-transform: capitalize;
   padding-left: 6px;
+  display: flex;
+  align-items: center;
+  font-size: 1.3rem;
+}
+
+.myParty .pokemon-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60px;
 }
 
 .myParty small {
   width: 100%;
+}
+
+.stats {
+  border-radius: 100vw;
+  padding: 0 10px;
+  font-size: 1rem;
+}
+
+.stats:hover {
+  background-color: var(--fire);
 }
