--- a/pokemon-battles-react/src/pages/welcome/Matches.css
+++ b/pokemon-battles-react/src/pages/welcome/Matches.css
@@ -1,7 +1,7 @@
 #matches {
-  background-color: var(--light);
+  background-color: var(--blue);
   backdrop-filter: blur(20px);
-  border-radius: 0 0 6px 6px;
+  border-radius: 6px;
   padding: 1rem;
   text-align: left;
   text-shadow: none;
@@ -51,11 +51,7 @@ text-transform: capitalize;
   display: flex;
 }
 
-#matches .find-match {
-  background-color: var(--bug);
-  border-radius: .5rem;
-  padding: 5px;
-}
+
 
 #matches .matches-border {
   padding: 1rem;
@@ -67,4 +63,71 @@ text-transform: capitalize;
 
 .matches-border h4 {
   margin-bottom: 10px !important;
+  color: var(--light);
+}
+
+#matches .match-button {
+  border-radius: 10px;
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#matches .match-button div {
+  width: 100%;
+  height: 100px;
+  transition: all ease .2s;
+
+}
+
+#matches .match-button .find-match-1 {
+  background-image: url('../../img/pokemon/squirtle.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: var(--water);
+}
+
+#matches .match-button .find-match-2 {
+  background-image: url('../../img/pokemon/charmander1.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: var(--fire);
+}
+
+#matches .match-button .leaderboard {
+  background-image: url('./champions.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: var(--fire);
+}
+
+#matches .match-button:hover .find-match-1,
+#matches .match-button:hover .find-match-2,
+#matches .match-button:hover .leaderboard
+
+ {
+  filter: blur(8px);
+}
+
+#matches .match-button span {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  text-align: center;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  font-size: 2.5rem;
+  font-family: var(--pokemon);
+  text-shadow: 2px 2px 4px #ffffff;
 }
