--- a/pokemon-battles-react/src/pages/battle/Battle.css
+++ b/pokemon-battles-react/src/pages/battle/Battle.css
@@ -1,33 +1,34 @@
 #battle {
    display: flex;
+   flex-direction: column;
+   flex-grow: 3;
    width: 100vw;
+   height: 100%;
    justify-content: center;
+   padding-bottom: 0 !important;
 }
 
 .battle {
     width: 100vw;
-    height: 100vh; 
     display: grid;
     margin-left: auto;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     justify-self: center;
     margin-left: 0;
-}
-
-
-.battle-top {
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
-    padding: 10px;
+    padding-bottom: calc(2rem + 50px) !important;
 }
 
 .battle-bottom {
-    grid-row: 2 / 3;
-    grid-column: 1 / 3;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    background-color: rgba(245, 245, 245, 0.55);
+    backdrop-filter: blur(20px);
+    height: 50%;
+    border-radius: 0 0 6px 6px;
+    padding: 1rem;
 }
 
 
@@ -38,8 +39,9 @@
     background-size: cover;
     background-repeat: no-repeat;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    height: 50%;
+    padding: 1rem;
+    border-radius: 6px 6px 0 0;
 }
 
 /* opponent boxes */
@@ -51,8 +53,8 @@
 
 #player-pokemon-box {
     position: relative;
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
+    grid-row: 2 / 2;
+    grid-column: 2 / 2;
 }
 
 /* Pokemons */
@@ -67,14 +69,33 @@
 
 #opponent-pokemon-img, #player-pokemon-img {
     position: relative;
-    width: 130px;
+    width: 7rem;
+    object-fit: cover;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    margin: 0 3rem 0 1rem;
+}
+
+#player-pokemon-img {
+    grid-row: 2 / 2;
+    grid-column: 1 / 2;;
+    object-fit: cover;
+    margin-left: -1rem;
+    margin-bottom: 5rem;
+}
+
+#opponent-pokemon-img {
+    grid-row: 1 / 2;
+    grid-column: 2 / 2;
     object-fit: cover;
 }
 
 #opponent-pokemon-img img, 
 #player-pokemon-img img {
     position: absolute;
-    width: 100%;
+    width: 8rem;
 }
 
 #opponent-pokemon-img img {
@@ -107,19 +128,20 @@
 }
 
 /* Battle Buttons */
-#battle-buttons button {
+.battle-buttons {
     border: none;
-    margin: 10px;
-    border-radius: 5px;
+    border-radius: 6px;
     font-size: 2rem;
+    text-shadow: -1px 2px 3px #3d3d3d6b, 0px 0px;
 }
 
-#battle-buttons button:nth-child(1) {
+#move-selection {
     background-color: Red;
     height: 75%;
 }
 
-#battle-buttons button:nth-child(2) {
+#pokemon-selection {
+    margin-top: 1rem;
     background-color: var(--yellow);
     height: 25%;
 }
@@ -127,15 +149,31 @@
 /* Fight Buttons */
 .moves > div {
     width: 100%;
-    height: 100%;
     text-align: left;
+}
+
+.moves {
+    width: 100%;
+    margin: .2rem 0 0 0.5rem;
+    background-color: transparent;
+    color: white;
 }
 
 .move-info, .move-name {
     display: flex;
     align-items: center;
-    font-size: .9em;
+    font-size: 1.2em;
     position: relative;
+}
+
+.move-des {
+    font-size: 0.9em;
+    color: var(--blue);
+}
+
+.move-info {
+    margin: 5px 0 8px 0;
+    border-radius: 6px !important;
 }
 
 .move-name {
@@ -159,21 +197,19 @@
 
 .move-info > div {
     width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
     text-transform: uppercase;
     font-weight: bold;
     color: var(--light);
-    padding-left: 1rem;
+    padding-left: 1rem; 
+    border-radius: 6px;
 }
-
 
 .move-info > div:nth-child(2) {
     justify-content: center;
     background-color: var(--gray);
     clip-path: polygon(33% 0, 100% 0, 100% 100%, 0% 100%);
-    border: 2px var(--gray) solid;
 }
 
 .move-info > div:nth-child(2)::before {
@@ -190,31 +226,125 @@
     height: 100%;
 }
 
-#battle-options .cancel {
-    background-color: transparent;
-    position: relative;
+.battle-grid {
+    overflow-y: auto;
+    height: 100%;
     display: flex;
-    color: white;
-    font-weight: bold;
-}
-
-#battle-options .cancel > div:nth-child(1) {
-    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    column-gap: 2rem;
+    margin-bottom: 1rem;
     justify-content: center;
-    align-items: center;
-    font-size: 1.1rem;
-    background-color: var(--danger);
 }
 
+.battle-grid::-webkit-scrollbar {
+    display: none;
+}
+
+.move {
+    padding: 0 1rem 0 1rem;
+    width: 400px !important;
+    background-color: #EFEFEF !important;
+    background-image:
+        linear-gradient(
+            to bottom,
+            var(--blue) 33%,
+            #ffffff00 0%
+        );
+    border-radius: 6px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100px;
+}
+
+.move:hover, .cancel:hover, .pokemon:hover:not(.dead), .send:hover, #pokemon-selection:hover, #move-selection:hover {
+    filter: brightness(80%);
+}
+
+.dead {
+    filter: brightness(75%);
+    background-color: gray !important;
+    background-image: none;
+}
+
+.cancel {
+    margin-top: auto;
+}
 
 /* Pokemon Selection */
-.pokemon-select {
 
+.pokemon {
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+    width: 400px;
+    background-size: contain;
+    border-radius: 6px;
+    gap: 1rem;
+    cursor: pointer;
+}
+
+.pokemon span {
+    text-align: left;
+}
+
+.pokemon-select-img {
+    width: 5rem;
+    height: 5rem;
+    object-fit: scale-down;
+    background-color: var(--light);
+    padding: 5px;
+    border-radius: 6px;
 }
 
 .pokemon-btn {
-    height: 100% !important;
-    margin-bottom: 0;
+    font-size: 1.5rem;
+    color: var(--blue);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.pokemon-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-right: auto;
+    width: 100%;
+}
+
+.level {
+    width: 100%;
+    background-color: var(--light);
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    text-align: center !important;
+    line-height: 2rem;
+    font-size: 0.9em;
+}
+
+.pokemon-subtitle {
+    color: var(--yellow);
+}
+
+.send {
+    height: 50%;
+    width: 75%;
+    border-radius: 6px;
+    align-self: center;
+    text-shadow: -1px 2px 3px #3d3d3d6b, 0px 0px;
+    font-size: 2em;
+    background-color: var(--grass);
+}
+
+#oppT {
+    color: var(--yellow);
 }
 
 .shadow {
