--- a/pokemon-battles-react/src/pages/battle/Battle.css
+++ b/pokemon-battles-react/src/pages/battle/Battle.css
@@ -347,6 +347,16 @@
     color: var(--yellow);
 }
 
+.toast-container {
+    position: absolute;
+    margin-right: auto;
+    max-width: 1000px;
+}
+
+.toast {
+    background-color: var(--fighting);
+}
+
 .shadow {
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
