--- a/pokemon-battles-react/src/pages/shop/components/ShopItem.css
+++ b/pokemon-battles-react/src/pages/shop/components/ShopItem.css
@@ -13,6 +13,13 @@
   flex-direction: column;
 }
 
+/* 655 x 575 img */
 .shop-item-img {
-  height: 160px;
+  width: 87.8px;
+  height: 100px;
 }
+/* 
+.confirm-footer {
+  align-items: center;
+} */
+
