--- a/pokemon-battles-react/src/pages/shop/Shop.css
+++ b/pokemon-battles-react/src/pages/shop/Shop.css
@@ -1,19 +1,9 @@
-/* #shop {
-  background-image: url('../../img/items/pokestop.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: left;
-  font-family: var(--museo);
-  text-shadow: -1px 2px 3px #3d3d3d6b, 0px 0px;
-  padding: 1rem;
-  gap: 0 1rem;
-	position: relative;
-	height: 100%;
-	width: 100%;
-} */
+.content-item {
+  overflow: auto !important;
+}
 
-#shop-row div {
-  margin-bottom: 1rem;
+.content-item::-webkit-scrollbar {
+  display: none;
 }
 
 .modal-images {
@@ -30,7 +20,6 @@
   animation: hideMystery 1.5s forwards;
   height: 200px;
 }
-
 
 .new-pokemon-img{
   position: relative;
