--- a/pokemon-battles-react/src/components/SettingsButton.css
+++ b/pokemon-battles-react/src/components/SettingsButton.css
@@ -70,3 +70,15 @@
 .music:hover{
     transform: scale(1.1);
 }
+
+.settings-container h3{
+    padding: 0;
+    margin-top: 10px;
+}
+
+.settings-container {
+    background-color: rgba(154, 152, 152, 0.425);
+    border-radius: 10px;
+    margin-bottom: 10px;
+    backdrop-filter: blur(6px);
+}
