--- a/pokemon-battles-react/src/pages/battle/Battle.css
+++ b/pokemon-battles-react/src/pages/battle/Battle.css
@@ -365,6 +365,10 @@
     background-color: var(--fighting);
 }
 
+.name {
+    color: var(--water);
+}
+
 .shadow {
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
