--- a/pokemon-battles-react/src/pages/friends/Friends.css
+++ b/pokemon-battles-react/src/pages/friends/Friends.css
@@ -100,12 +100,14 @@ button {
 
 #delete{
   z-index: 1;
-  width: calc(20%);
+  width: calc(15%);
   margin-left: auto;
+  
 }
 
 #delete:hover{
   background-color: var(--yellow);
+  color:black;
 }
 
 
@@ -115,21 +117,21 @@ button {
   flex-direction: row;
   justify-content: center;
   margin-bottom: 0;
-  margin-left: auto;
+  
 }
 
 .battle-btn img:nth-child(1) {
   opacity: 0.1;
   filter: grayscale(1);
   position: absolute;
-  left: 0;
+  left: 10;
   top: 0;
-  width: 120%;
+  width: 29%;
   height: auto;
 }
 
 .battle-btn img:nth-child(2) {
-  height: 40px;
+  height: 10px;
   margin-right: 4px;
   z-index: 5;
 }
