--- a/pokemon-battles-react/src/Variables.css
+++ b/pokemon-battles-react/src/Variables.css
@@ -55,7 +55,7 @@
 .full-screen {
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    overflow: hidden !important;
     background-color: var(--blue) !important;
     color: var(--light);
     position: relative;
@@ -84,6 +84,7 @@
 .content-item {
     width: 100%;
     height: 100%;
+    overflow: hidden !important;
     padding: 1rem;
     max-width: 1080px;
     padding-bottom: calc(4rem + 50px);
