--- a/pokemon-battles-react/src/pages/battle/Battle.css
+++ b/pokemon-battles-react/src/pages/battle/Battle.css
@@ -151,12 +151,12 @@
 }
 
 /* Fight Buttons */
-.moves > div {
+.moves2 > div {
     width: 100%;
     text-align: left;
 }
 
-.moves {
+.moves2 {
     width: 100%;
     margin: .2rem 0 0 0.5rem;
     background-color: transparent;
@@ -246,7 +246,7 @@
     display: none;
 }
 
-.move {
+.move2 {
     padding: 0 1rem 0 1rem;
     width: 400px !important;
     background-color: #EFEFEF !important;
