--- a/pokemon-battles-react/src/pages/welcome/Welcome.css
+++ b/pokemon-battles-react/src/pages/welcome/Welcome.css
@@ -98,6 +98,10 @@ h3 {
   border: 1px solid var(--black);
 }
 
+#welcome {
+  overflow-y: hidden !important;
+}
+
 #welcome a img:nth-child(2) {
   margin-right: 1rem;
 }
@@ -110,10 +114,10 @@ h3 {
 #new-user {
   grid-row: 1 / 8;
   grid-column: 1 / 3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  height: 100%;
+  border-radius: 8px;
+  backdrop-filter: blur(6px);
+  padding: 4px;
 }
 
 
@@ -153,6 +157,18 @@ h3 {
   transition: all ease .25s;
   filter: grayscale(1) brightness(0);
   cursor: pointer;
+  animation: pokemonSelect 3s forwards;
+  opacity: 0;
+}
+
+@keyframes pokemonSelect {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 #new-user .first-pokemon-unselected:hover {
@@ -179,12 +195,56 @@ h3 {
   padding: 1rem;
 }
 
-#new-user h3 {
-  text-transform: capitalize;
-  padding: 0;
-}
-
 #new-user .prof {
   height: 200px;
 }
 
+
+#new-user-title h1 {
+  opacity: 0;
+  animation: welcome 3s forwards;
+}
+
+#prof-oak-1 {
+  opacity: 0;
+  animation: welcome 1s forwards;
+  animation-delay: 2s;
+}
+
+#prof-oak-2 {
+  opacity: 0;
+  animation: welcome 1s forwards;
+  animation-delay: 12s;
+}
+
+
+#new-user input {
+  opacity: 0;
+  animation: welcome 1s forwards;
+  animation-delay: 21s;
+}
+
+#new-user h3 {
+  opacity: 0;
+  animation: welcome 1s forwards;
+  animation-delay: 20s;
+  text-transform: capitalize;
+  padding: 0;
+}
+
+#new-user small {
+  color: var(--fire);
+  opacity: 0;
+  animation: welcome 1s forwards;
+  animation-delay: 20s;
+}
+
+@keyframes welcome {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
