--- a/pokemon-battles-react/src/Variables.css
+++ b/pokemon-battles-react/src/Variables.css
@@ -87,6 +87,7 @@
     overflow: hidden !important;
     padding: 1rem;
     max-width: 1080px;
+    
     /* padding-bottom: calc(4rem + 50px); */
 }
 
@@ -140,10 +141,24 @@ input {
     color: var(--light) !important;
 }
 
-.menu-grid {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 100px auto;
-    font-family: var(--museo);
-    text-shadow: -1px 2px 3px #3d3d3d6b, 0px 0px;
-    }
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+   box-shadow: inset 0 0 5px var(--blue); 
+   border-radius: 6px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: white; 
+    border-radius: 6px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #b30000; 
+  }
