--- a/pokemon-battles-react/src/pages/party/party.css
+++ b/pokemon-battles-react/src/pages/party/party.css
@@ -2,11 +2,11 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  overflow-y: auto;
+  /* overflow-y: auto; */
 }
 
 .party-pokemon-list {
   width: 100%;
   overflow-y: auto;
-  
+  height: calc(100% - (110px));
 }
