--- a/pokemon-battles-react/src/pages/shop/Shop.css
+++ b/pokemon-battles-react/src/pages/shop/Shop.css
@@ -1,11 +1,3 @@
-.content-item {
-  overflow: auto !important;
-}
-
-.content-item::-webkit-scrollbar {
-  display: none;
-}
-
 .modal-images {
   align-items: center;
   display: flex;
@@ -49,4 +41,10 @@
     opacity: 1;
     filter: brightness(100%)
   }
+}
+
+#shop .shop-contents {
+  height: calc(100% - (110px));
+  overflow-y: auto;
+  overflow-x: hidden;
 }
