--- a/pokemon-battles-react/src/pages/welcome/Matches.css
+++ b/pokemon-battles-react/src/pages/welcome/Matches.css
@@ -1,15 +1,19 @@
 #matches {
-  background-color: var(--blue);
+  /* background-color: var(--blue); */
   backdrop-filter: blur(20px);
   border-radius: 6px;
   padding: 1rem;
   text-align: left;
   text-shadow: none;
-  color: var(--black);
+  color: var(--light);
   width: 100%;
   overflow-y: auto !important;
   overflow-x: hidden;
-  height: 100%;
+  height: calc(100% - (110px));
+}
+
+#matches .match-button {
+  color: var(--black);
 }
 
 #matches .matches-party{
@@ -101,8 +105,7 @@ text-transform: capitalize;
 #matches .match-button:hover .find-match-1,
 #matches .match-button:hover .find-match-2,
 #matches .match-button:hover .leaderboard
-
- {
+{
   filter: blur(8px);
 }
 
