--- a/pokemon-battles-react/src/pages/friends/Friends.css
+++ b/pokemon-battles-react/src/pages/friends/Friends.css
@@ -1,29 +1,22 @@
-button {
-  border: none;
-}
-
 #friends {
-  font-family: var(--museo);
-  overflow-y: auto;
-  -ms-overflow-style: none;  
-  scrollbar-width: none; 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
-  max-width: 100% !important;
-  margin-top: 1rem;
+  overflow: hidden !important;
 }
 
-#friends::-webkit-scrollbar {
+/* #friends {
+  overflow-y: hidden !important;
+  align-items: center;
+
+} */
+
+
+
+/* #friends::-webkit-scrollbar {
   display: none;
-}
+} */
 
 .friends-grid {
-  display: flex;
-  flex-direction: column;
-  box-shadow: none;
-  width: 100%;
+  height: calc(100% - (110px));
+  overflow-y: auto !important;
 }
 
 .add-friend-container {
@@ -33,10 +26,28 @@ button {
   z-index: 6;
 }
 
-#friends .friends-h, .form-floating, .menu-item:not(.battle-btn) {
+/* #friends .friends-h, .form-floating, .menu-item:not(.battle-btn) {
   max-width: 1080px;
   margin-left: auto;
   margin-right: auto;
+} */
+
+.friend-online {
+  margin-top: 10px;
+  display: flex;
+  align-items: center; 
+  padding: 10px !important;
+  border-radius: 5px;
+}
+
+.friend-online button {
+  margin-top: 0;
+}
+
+
+.friend-online button img {
+  /* height: auto; */
+  width: 30px;
 }
 
 .menu-item:hover {
@@ -49,9 +60,10 @@ button {
 }
 
 #friends-list {
-  height: 100%;
+  /* height: 100%;
+  width: 100%;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: hidden; */
   padding: 1rem;
   padding-bottom: 5rem;
 }
@@ -66,19 +78,13 @@ button {
 
 .friend-online {
   background-color: var(--grass);
-  display: flex;
-  flex-direction: row;
-  gap: 15px;
   padding: 0 0 0 10px;
 }
 
 .friend-offline {
-  background-color: var(--flying);
+  background-color: var(--flying) !important;
 }
 
-.friend-offline img {
-  margin-right: 15px;
-}
 
 .add-friend-btn {
   flex-direction: row;
@@ -98,14 +104,18 @@ button {
 }
 
 
-#delete{
+.friend-online .delete{
   z-index: 1;
-  width: calc(15%);
-  margin-left: auto;
+ margin-left: 10px;
   
 }
 
-#delete:hover{
+.friend-online span {
+  font-size: 1.6em;
+  color: var(--black);
+}
+
+.friend-online .delete:hover{
   background-color: var(--yellow);
   color:black;
 }
