--- a/pokemon-battles-react/src/pages/shop/Shop.css
+++ b/pokemon-battles-react/src/pages/shop/Shop.css
@@ -20,7 +20,7 @@
   justify-content: center;
   align-items: center;
   animation: showPokemon 3.5s forwards;
-  height: 250px;
+  width: 100%;
 }
 
 @keyframes hideMystery {
